<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:background="@android:color/black">

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/darkPopupBg"
        app:cardBackgroundColor="@color/darkPopupBg"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDialogTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/label_settings"
                android:textAllCaps="true"
                android:textColor="@color/lightOrange"
                android:textSize="20sp"
                android:textStyle="bold" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp">

                <TextView
                    android:id="@+id/tvLabelToggle"
                    style="@style/TextlabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/label_auto_refresh"
                    app:layout_constraintBottom_toBottomOf="@id/switchAuto"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@id/switchAuto" />

                <Switch
                    android:id="@+id/switchAuto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:thumbTint="@color/lightOrange"
                    android:trackTint="@color/backgroundGrey"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:targetApi="m" />


            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_marginTop="24dp"
                android:text="@string/label_save"
                android:textColor="@color/lightOrange"
                android:background="@drawable/btn_hollow_orange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>