<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginBottom="6dp"
    android:background="@color/darkCardBackground"
    android:elevation="4dp"
    app:cardBackgroundColor="@color/darkCardBackground"
    app:cardCornerRadius="4dp"
    tools:targetApi="lollipop">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">

        <android.support.constraint.Guideline
            android:id="@+id/vertGuideStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <android.support.constraint.Guideline
            android:id="@+id/vertGuideEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.98" />

        <TextView
            android:id="@+id/tvLastUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/lightOrange"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/vertGuideEnd"
            tools:text="12 Januari 2018" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/lightOrange"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/vertGuideStart"
            app:layout_constraintTop_toBottomOf="@id/tvLastUpdate"
            tools:text="Bitcoin" />

        <TextView
            android:id="@+id/tvCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/tvName"
            app:layout_constraintStart_toEndOf="@id/tvName"
            app:layout_constraintLeft_toRightOf="@id/tvName"
            app:layout_constraintTop_toTopOf="@id/tvName"
            tools:text="BTC" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/tvName"
            app:layout_constraintEnd_toStartOf="@id/vertGuideEnd"
            app:layout_constraintRight_toLeftOf="@id/vertGuideEnd"
            tools:text="200.0 $" />

        <LinearLayout
            android:id="@+id/llWeekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toRightOf="@id/vertGuideStart"
            app:layout_constraintTop_toBottomOf="@id/tvName">

            <TextView
                android:id="@+id/tvLabelDaily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/label_24h"
                android:textColor="@color/semiDarkGrey"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvStatsDaily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="-24 %" />

            <ImageView
                android:id="@+id/ivIndicatorDaily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:srcCompat="@drawable/ic_arrow_downward"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDaily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/llWeekly"
            app:layout_constraintLeft_toRightOf="@id/llWeekly"
            app:layout_constraintRight_toLeftOf="@id/llHourly"
            app:layout_constraintTop_toTopOf="@id/llWeekly">

            <TextView
                android:id="@+id/tvLabelWeekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/label_7d"
                android:textColor="@color/semiDarkGrey"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvStatsWeekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/tvLabelDaily"
                app:layout_constraintStart_toEndOf="@+id/tvLabelWeekly"
                app:layout_constraintTop_toTopOf="@id/tvLabelDaily"
                tools:text="24 %" />

            <ImageView
                android:id="@+id/ivIndicatorWeekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:srcCompat="@drawable/ic_arrow_upward"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llHourly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/llWeekly"
            app:layout_constraintEnd_toStartOf="@id/vertGuideEnd"
            app:layout_constraintTop_toTopOf="@id/llWeekly">

            <TextView
                android:id="@+id/tvLabelHourly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/label_1h"
                android:textColor="@color/semiDarkGrey"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvStatsHourly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="24 %" />

            <ImageView
                android:id="@+id/ivIndicatorHourly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:srcCompat="@drawable/ic_arrow_upward"
                tools:ignore="ContentDescription" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>